--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <script src="js/cs-concepts.js" async></script>
     <script src="js/cs.js" async></script>
     <script src="js/app.js" async></script>
-
+    
+    <link rel="shortcut icon" href="favicon.ico">
     <link href="fonts/fontawesome-free-5.11.1-web/css/all.css" rel="stylesheet" type="text/css">
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
