--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="js/cs.js" async></script>
     <script src="js/app.js" async></script>
     
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="https://github.com/sometheasiekswx/MathWars/blob/master/favicon.ico">
     <link href="fonts/fontawesome-free-5.11.1-web/css/all.css" rel="stylesheet" type="text/css">
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
