--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <link href="css/hamburger.css" rel="stylesheet" type="text/css">
     <link href="css/buttons.css" rel="stylesheet" type="text/css">
    
-    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/sometheasiekswx/MathWars/tree/master/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/sometheasiekswx/MathWars/tree/master/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/sometheasiekswx/MathWars/tree/master/images/favicon-16x16.png">
-    <link rel="manifest" href="https://github.com/sometheasiekswx/MathWars/tree/master/images/site.webmanifest">
-    <link rel="mask-icon" href="https://github.com/sometheasiekswx/MathWars/tree/master/images/safari-pinned-tab.svg" color="#3e92b6">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#3e92b6">
     <link rel="shortcut icon" href="/images/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="MathWars">
     <meta name="application-name" content="MathWars">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="https://github.com/sometheasiekswx/MathWars/tree/master/images/mstile-144x144.png">
-    <meta name="msapplication-config" content="https://github.com/sometheasiekswx/MathWars/tree/master/images/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
+    <meta name="msapplication-config" content="/images/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 </head>
 
