Changed Name & Added New Trig. Level

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>MathWars</title>
+    <title>MathWars Beta</title>
 
     <script src="data/legal.js" async></script>
 
@@ -26,7 +26,7 @@
     <script src="js/cs-concepts.js" async></script>
     <script src="js/cs.js" async></script>
     <script src="js/app.js" async></script>
-    
+
     <link href="fonts/fontawesome-free-5.11.1-web/css/all.css" rel="stylesheet" type="text/css">
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -35,7 +35,7 @@
     <link href="css/screen.css" rel="stylesheet" type="text/css">
     <link href="css/hamburger.css" rel="stylesheet" type="text/css">
     <link href="css/buttons.css" rel="stylesheet" type="text/css">
-   
+
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
